--- a/Social Calc/res/values/strings.xml
+++ b/Social Calc/res/values/strings.xml
@@ -5,5 +5,27 @@
     <string name="app_name">Social Calc</string>
     <string name="help">Help</string>
     <string name="settings">Settings</string>
+    <string name="start_calc">|</string>
+    <string name="request">Please keep the phone in protrait</string>
+    <string name="delete">DELETE</string>
+    <string name="share">SHARE</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="divide">&#247;</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="multiply">x</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="subtract">-</string>
+    <string name="point">.</string>
+    <string name="zero">0</string>
+    <string name="equals">=</string>
+    <string name="plus">+</string>
+    <string name="more">MORE</string>
+    
 
 </resources>
