--- a/Social Calc/res/values/strings.xml
+++ b/Social Calc/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_name">Social Calc</string>
     <string name="help">Help</string>
     <string name="settings">Settings</string>
-    <string name="start_calc">|</string>
+    <string name="start_calc"></string>
     <string name="request">Please keep the phone in protrait</string>
     <string name="delete">DELETE</string>
     <string name="share">SHARE</string>
@@ -26,6 +26,7 @@
     <string name="equals">=</string>
     <string name="plus">+</string>
     <string name="more">MORE</string>
+    <string name="share_info">The sharing feature of Social Calc is not yet complete.</string>
     
 
 </resources>
