Things are working, now to implement the other fragment :)

--- a/Social Calc/res/values/strings.xml
+++ b/Social Calc/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="point">.</string>
     <string name="zero">0</string>
     <string name="equals">=</string>
-    <string name="plus">+</string>
+    <string name="add">+</string>
     <string name="more">MORE</string>
     <string name="share_info">The sharing feature of Social Calc is not yet complete.</string>
     
