--- a/Social Calc/res/values/strings.xml
+++ b/Social Calc/res/values/strings.xml
@@ -27,6 +27,19 @@
     <string name="add">+</string>
     <string name="more">MORE</string>
     <string name="share_info">The sharing feature of Social Calc is not yet complete.</string>
+    <string name="sin">sin</string>
+    <string name="cos">cos</string>
+    <string name="tan">tan</string>
+    <string name="ln">ln</string>
+    <string name="log">log</string>
+    <string name="factorial">!</string>
+    <string name="pi">&#960;</string>
+    <string name="e">e</string>
+    <string name="power">^</string>
+    <string name="open_paren">(</string>
+    <string name="close_paren">)</string>
+    <string name="root">&#8730;</string>
+    
     
 
 </resources>
