--- a/Social Calc/res/values/strings.xml
+++ b/Social Calc/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="close_paren">)</string>
     <string name="root">&#8730;</string>
     <string name="copy">Copy to Clipboard</string>
+    <string name="pre_text_prompt">Select pre operation phrase:</string>
     
     
 
