Share Dialog box is running, still can't share

--- a/Social Calc/res/values/strings.xml
+++ b/Social Calc/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="more_to_come">More to come...</string>
     <string name="doesnt_know">*User* doesn\'t know </string>
     <string name="just_did">*User* just calculated </string>
-    
+    <string name="pick">Pick one</string>
     
 
 </resources>
